--- a/webbrowser.html
+++ b/webbrowser.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,19 +5,20 @@
 <link rel="stylesheet" href="app.css" type="text/css">
 <title>Visie Python</title>
 </head>
-<body>  
-<h1>Tabela Pessoas</h1>
+<body>
 <table class="table">
-[]
+['<tr><td>Visie</td>', '<td>03/03/2021 <a href= >Remover</a></td>', '<tr><td>Me</td>', '<td>03/03/2021 <a href= >Remover</a></td>', '<tr><td>Contrata</td>', '<td>03/03/2021 <a href= >Remover</a></td>']
 </table>
-<form action="/action_page.php" class="form">
+<div class="form">
+<form action="/action_page.php">
   <label for="fname">Nome:</label><br>
   <input type="text" id="fname" name="fname" value="John"><br>
   <label for="lname">RG:</label><br>
-  <input type="text" id="lname" name="lname" value="123"><br><br>
+  <input type="text" id="lname" name="lname" value="123"><br>
   <label for="lname">CPF:</label><br>
   <input type="text" id="lname" name="lname" value="123456"><br><br>
-  <input type="submit" value="Submit">
+  <input type="submit" value="Salvar">
 </form>
+</div>
 </body>
 </html>
